2006-07-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimplevelstool.c (levels_input_area_event): Applied
	patch from Wim Lewis which fixes major uglyness (the code was
	rounding using sprintf() and atof() -- puke). Fixes bug #348317.

2006-07-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-edit.c: formatting.

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.override: manually wrap the function
	gimp_brush_select_button_get_brush().

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/py-slice.py: use PF_DIRNAME for save_path.
	Fixes bug #138714.

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.py: make DrawableSelector work again.

2006-07-20  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.py: make the FileSelector class work
	again.

	* plug-ins/pygimp/gimpfu.py: add PF_FILENAME and PF_DIRNAME to
	match script-fu. Also, if the default value for PF_FILE ends in '/',
	it goes PF_DIRNAME mode.

2006-07-19  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.py: font select API is get_font, not
	get_font_name.

2006-07-19  Manish Singh  <yosh@gimp.org>

	This is the start of wrapping much more of the GIMP API in Python.
	It's not complete yet, some things are broken.

	* plug-ins/pygimp/gimpcolormodule.c
	* plug-ins/pygimp/pygimpcolor.h
	* plug-ins/pygimp/pygimpcolor-api.h
	* plug-ins/pygimp/pygimp-colors.c: wrapped GimpHSV, GimpHSL, and
	GimpCMYK. Fleshed out a bit more of GimpRGB as well. Made the API
	exportable to other modules.

	* plug-ins/pygimp/pygimp-rgb.c: removed, subsumed into
	pygimp-colors.c.

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: PDB calls receive and create
	gimpcolor.RGB objects now.

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-api.h: export pygimp_drawable_new.

	* plug-ins/pygimp/gimpcolor-types.defs
	* plug-ins/pygimp/gimpenums-types.defs
	* plug-ins/pygimp/gimpui.defs